--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   mysql:
     image: mysql:8.0
@@ -45,6 +46,21 @@ services:
     ports:
       - "${FRONTEND_PORT:-3000}:3000"
     depends_on: [api]
+    networks: [stack]
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: message_phpmyadmin
+    restart: unless-stopped
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_USER: ${MYSQL_USER}
+      PMA_PASSWORD: ${MYSQL_PASSWORD}
+    depends_on:
+      - mysql
     networks: [stack]
 
 volumes:
